fixed modal height on mobile

--- a/public/src/vue/less/_modal.less
+++ b/public/src/vue/less/_modal.less
@@ -121,7 +121,7 @@
         overflow: hidden;
 
         #app:not(.is--wide) & {
-          height: auto;
+          // height: auto;
         }
       }
     }
